align richedit fields correctly

--- a/pospi_base_admin.css
+++ b/pospi_base_admin.css
@@ -123,7 +123,7 @@ li.token-input-token.img .token-input-delete-token {
 }
 
 /* make richEdit inputs the right width */
-.formio .richedit .wp-editor-wrap { display: inline-block; width: 67%; }
+.formio .richedit .wp-editor-wrap { display: inline-block; width: 67%; vertical-align: top; }
 .formio .richedit .wp-editor-container { background: #FFF; }
 
 /*-----------------------------------------------------------------------*/
